# test_task

./: .gitignore  config.py  log.txt  pyproject.toml  readme.md  weather  weather_service.py
