[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
